fix(faq): remove extra spacing in faq2 and faq6

--- a/editor-components/faq/faq2/faq2.module.scss
+++ b/editor-components/faq/faq2/faq2.module.scss
@@ -99,7 +99,7 @@
       height: 100%;
       display: flex;
       flex-direction: column !important;
-      padding: calc(var(--composer-gap-lg) * 2) var(--composer-gap-xl);
+      padding: calc(var(--composer-gap-lg) * 2) var(--composer-gap-xl) 0;
       gap: var(--composer-gap-md) !important;
       align-items: center !important;
       justify-content: center !important;
